<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="@dimen/elevation"
        app:cardUseCompatPadding="true"
        tools:context=".ui.component.author.AuthorActivity">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layoutRegister"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_layout">

            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/bold_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title_text_size"
                    android:text="@string/update_room" />

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etRoomNameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/room_s_name"
                    android:layout_marginStart="@dimen/margin_layout"
                    android:layout_marginTop="@dimen/margin_layout"
                    android:layout_marginEnd="@dimen/margin_layout"/>

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDescriptionEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:layout_marginStart="@dimen/margin_layout"
                    android:layout_marginTop="@dimen/margin_layout"
                    android:layout_marginEnd="@dimen/margin_layout"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnUpdateRoom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:background="@drawable/button_bg_color"
                    android:textColor="@color/white_color"
                    android:layout_marginTop="@dimen/margin_layout" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.cardview.widget.CardView>