<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="@dimen/elevation"
        app:cardUseCompatPadding="true"
        tools:context=".ui.component.author.AuthorActivity">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layoutAddStation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_layout">

            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/bold_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title_text_size"
                    android:text="@string/create_station" />

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etStationName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/station_s_name"
                    android:layout_marginStart="@dimen/margin_layout"
                    android:layout_marginTop="@dimen/margin_layout"
                    android:layout_marginEnd="@dimen/margin_layout"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_layout"
                    android:layout_marginTop="@dimen/margin_layout"
                    android:layout_marginEnd="@dimen/margin_layout">

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvDateOfStop"
                        style="@style/normal_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:text="@string/choose_date"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/ibEditCalendar" />

                <androidx.appcompat.widget.AppCompatImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_edit_calendar_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:id="@+id/ibEditCalendar" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_layout"
                    android:layout_marginTop="@dimen/margin_layout"
                    android:layout_marginEnd="@dimen/margin_layout">

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvTimeStop"
                        style="@style/normal_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_time"
                        android:layout_marginStart="3dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/ibEditTime" />

                <androidx.appcompat.widget.AppCompatImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_timer_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:id="@+id/ibEditTime" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:layout_marginStart="@dimen/margin_layout"
                    android:layout_marginTop="@dimen/margin_layout"
                    android:layout_marginEnd="@dimen/margin_layout"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAddStation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:background="@drawable/button_bg_color"
                    android:textColor="@color/white_color"
                    android:layout_marginTop="@dimen/margin_layout" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.cardview.widget.CardView>