<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="@dimen/elevation"
        app:cardUseCompatPadding="true"
        tools:context=".ui.component.author.AuthorActivity">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layoutRegister"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_layout">

            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/bold_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title_text_size"
                    android:text="@string/register" />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etEmailRegisterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_layout"
                    android:layout_marginTop="@dimen/margin_layout"
                    android:layout_marginEnd="@dimen/margin_layout"
                    app:startIconContentDescription="@string/email"
                    app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmailRegister"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingVertical="@dimen/padding_vertical_text_field" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPasswordRegisterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_layout"
                    android:layout_marginTop="@dimen/margin_layout"
                    android:layout_marginEnd="@dimen/margin_layout"
                    app:endIconMode="password_toggle"
                    app:startIconContentDescription="@string/password"
                    app:startIconDrawable="@drawable/ic_baseline_key_24">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPasswordRegister"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingVertical="@dimen/padding_vertical_text_field" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etFullNameRegisterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_layout"
                    android:layout_marginTop="@dimen/margin_layout"
                    android:layout_marginEnd="@dimen/margin_layout"
                    app:startIconContentDescription="@string/full_name"
                    app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFullnameRegister"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/full_name"
                        android:inputType="textPersonName"
                        android:paddingVertical="@dimen/padding_vertical_text_field" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPhoneNumberRegisterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_layout"
                    android:layout_marginTop="@dimen/margin_layout"
                    android:layout_marginEnd="@dimen/margin_layout"
                    app:startIconContentDescription="@string/email"
                    app:startIconDrawable="@drawable/ic_baseline_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPhoneNumberRegister"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:paddingVertical="@dimen/padding_vertical_text_field" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etAddressRegisterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_layout"
                    android:layout_marginTop="@dimen/margin_layout"
                    android:layout_marginEnd="@dimen/margin_layout"
                    app:startIconContentDescription="@string/address"
                    app:startIconDrawable="@drawable/ic_baseline_location_on_24">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAddressRegister"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/address"
                        android:inputType="text"
                        android:maxLines="5"
                        android:paddingVertical="@dimen/padding_vertical_text_field" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:background="@drawable/button_bg_color"
                    android:textColor="@color/white_color"
                    android:layout_marginTop="@dimen/margin_layout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_layout">

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:id="@+id/appCompatTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                        style="@style/bold_text"
                        android:textSize="@dimen/custom_normal_text_size"
                        android:textColor="@color/blue_ribbon_color"
                        android:id="@+id/tvToLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView"
                        app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
                        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.cardview.widget.CardView>